[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Player/player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 4 )

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "JumpDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "JumpUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Run"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Blink"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "_set_invincible"
}, {
"args": [ false ],
"method": "_set_invincible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox/Collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2, 4 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )
hframes = 8
frame = 6

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="SpriteAnimator" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 5 )
anims/JumpDown = SubResource( 3 )
anims/JumpUp = SubResource( 4 )
anims/Run = SubResource( 2 )

[node name="BlinkAnimator" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 7 )

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hurtbox" parent="." groups=[
"player",
] instance=ExtResource( 3 )]
collision_layer = 2147483652

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 6 )
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]

[editable path="Hurtbox"]
